feat: add react

--- a/src/index.html
+++ b/src/index.html
@@ -9,42 +9,7 @@
     <title>News API</title>
 </head>
 <body>
-    <header><h1>News API</h1></header>
-    <div class="content">
-        <div class="content__data">
-            <div class="search">
-                <input type="text" class="search__input" id="search">
-                <button class="search__button" id="search-button">Search</button>
-            </div>
-        
-            <div id="wrapper" class="wrapper"></div>
-        </div>       
-
-        <div class="menu content__menu">  
-            <h3 class="menu__title">Sources</h3>
-            <div class="menu__sources" id="sources"></div>
-        </div>
-    </div>
-    
-
-    <div id="templates" class="display-none">
-        <div class="card">
-            <img class="card__image" src="" alt=""/>
-            <h2 class="card__title"></h2>
-            <p class="card__text"></p>
-            <a class="card__url" href="" target="_blank"></a>
-        </div>
-        <div class="load-more">
-            <button id="load-more" class="load-more__text">Load more</span>
-        </div>
-        <div class="source">
-            <input class="source__checkbox" type="checkbox" id="source-checkbox" name="sources">
-            <label class="source__label" for=""></label>
-        </div>
-        <div class="no-items">
-            There are no articles matching your request.
-        </div>
-    </div>
-
+    <header><a href="https://newsapi.org"><h1>News API</h1></a></header>
+    <div class="content" id="content"></div>
 </body>
 </html>
